common statistis and experiments